--- a/index.html
+++ b/index.html
@@ -64,17 +64,16 @@
   <main>
 
     <!-- ===== Intro ===== -->
-    <section id="intro" class="fade-in">
+       <section id="intro" class="fade-in">
       <h2>こんにちは</h2>
       <p>
         ご覧いただきありがとうございます。<br>
-        このポートフォリオは2025年6月中旬頃にPCを購入したのをきっかけに、未経験から動画やWeb制作に挑戦した記録です。<br>
-        実践しながら勉強・模索を重ね、サイトや各短編動画を含めて約2週間で制作しました。<br><br>
-        下記にあるイラストは全て過去に友達の為につくった作品です。(使用ツール：ibisPaint）<br>
-        絵は得意ではないのですが、下絵や参考画像、写真等があれば少しずつ形にすることができます。友達にも「こんな風にしてほしい」など希望のイメージ画像をもらって、話し合いながらできる範囲で近づけるよう描きました。<br><br>
-        未経験分野から動画編集やWeb制作の勉強を始め、少しずつ自分で形にしてきた作品をまとめています。<br>
+        このポートフォリオは2025年6月頃にPC購入したのをきっかけに、動画編集やWeb制作、3DCGなどにチャレンジして作ったものです。
+        全て未経験状態から、サイトや各短編動画を含めて約2週間で制作しました。<br><br>
+        下記にあるイラストは過去に友達の為につくったものです。(使用ツール：ibisPaint）<br>
+        絵は得意ではないのですが、下絵や参考画像、写真等をもとに形にしてきました。<br><br>
         製作中はわからない事も多く、ネットやChatGPTなどのAIツールも参考にしつつ自分なりに試行錯誤を重ねました。<br><br>
-        まだまだ学びの途中ですが、「こんなツールが使える、こんな雰囲気の動画作れる」など感じてもらえたら嬉しいです。<br>
+        まだまだ学びの途中ですが、「こんなツールの使用や雰囲気の動画作れる」など感じてもらえたら嬉しいです。<br>
         どうぞごゆっくりご覧ください。
       </p>
     </section>
