--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <p>
         ご覧いただきありがとうございます。<br>
         このポートフォリオは2025年6月頃にPC購入したのをきっかけに、動画編集やWeb制作、3DCGなどにチャレンジして作ったものです。
-        全て未経験状態から、サイトや各短編動画を含めて約2週間で制作しました。<br><br>
+        全て未経験な状態から、サイトや各短編動画を含めて約2週間で制作しました。<br><br>
         下記にあるイラストは過去に友達の為につくったものです。(使用ツール：ibisPaint）<br>
         絵は得意ではないのですが、下絵や参考画像、写真等をもとに形にしてきました。<br><br>
         製作中はわからない事も多く、ネットやChatGPTなどのAIツールも参考にしつつ自分なりに試行錯誤を重ねました。<br><br>
@@ -168,7 +168,7 @@
           <img src="images/chibi_characters.jpeg" alt="ミニキャラ作品" class="modal-image" data-caption="ミニキャラ作品です" data-index="1">
           <div class="card-body">
             <h3 class="-tittle">ミニキャライラスト</h3>
-          <p class="text">上のキャラは動画内にいる3DCGキャラの原本で過去に猫のアイコンフレーム枠に合わせて描いたオリキャラです。下のキャラはlineスタンプ等にも使える猫x投資家。典型的なイメージ（眼鏡やPCなど）は避けたいという公募を見て描きました。（練習用に書いただけなので応募はしていません）</p>
+          <p class="text">上のキャラは動画内にいる3DCGキャラの原案で過去に猫のアイコンフレーム枠に合わせて描いたオリキャラです。下のキャラはlineスタンプ等にも使える猫x投資家。典型的なイメージ（眼鏡やPCなど）は避けたいという公募を見て描きました。（練習用に書いただけなので応募はしていません）</p>
         </div>
         </div>
         <div class="card">
