--- a/index.html
+++ b/index.html
@@ -172,10 +172,17 @@
         </div>
         </div>
         <div class="card">
-          <img src="images/portrait.jpeg" alt="簡易な似顔絵" class="modal-image" data-caption="簡易な似顔絵です" data-index="2">
+          <img src="images/portrait.jpeg" alt="簡易な似顔絵" class="modal-image" data-caption="簡単な似顔絵です" data-index="2">
           <div class="card-body">
              <h3 class="-tittle">簡単な似顔絵イラスト</h3>
              <p>上２点は友達のアイコン用に描いたミニキャラ。下のイラストは友達の結婚祝いとして実際の写真をもとに制作しました。(簡単な描き方ですが顔は身バレ防止として伏せさせてもらってます。雰囲気だけ伝われば幸いです)</p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/mimi_models.jpg" alt="自作キャラ衣装展開" class="modal-image" data-caption="キャラクターモデル展開です" data-index="3">
+          <div class="card-body">
+             <h3 class="-tittle">自作キャラ衣装バリエーション</h3>
+             <p>オリジナルキャラ「mimi」の衣装違いやポーズや表情の一部パターンです。VRoidやBlenderで制作し、用途や場面に合わせて使い分けられるよう調整しました。</p>
           </div>
         </div>
       </div>
