--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <div class="video-wrapper"></div>
           <div class="aspect-ratio">
           <iframe src="https://youtube.com/embed/N4yu1AbHn9A" title="Vlog" allowfullscreen></iframe></div>
-          <p>1日の生活をゆるく切り取ったVlog風ムービー。BGMやナレーションにもこだわりました。</p>
+          <p>自作キャラクター「mimi」がナレーションで1日の生活をゆるく切り取ったVlog風ムービーです。(動画内の映像はフリー素材を使用しており本人出演ではありません。)</p>
         </div>
 
         <div class="card" data-badge="プロモ">
