--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
       <nav id="main-nav" class="main-nav">
         <a href="#intro">About</a>
         <a href="#skills">Skills</a>
-        <a href="#videos">Works</a>
+        <a href="#videos">動画</a>
+        <a href="#illustration">イラスト</a>
         <a href="#contact">Contact</a>
       </nav>
     </div>
@@ -64,7 +65,7 @@
   <main>
 
     <!-- ===== Intro ===== -->
-       <section id="intro" class="fade-in">
+    <section id="intro" class="fade-in">
       <h2>こんにちは</h2>
       <p>
         ご覧いただきありがとうございます。<br>
@@ -79,6 +80,7 @@
     </section>
 
     <a href="tools.html" class="btn-link">🔨制作ツール・工程を見る</a>
+    <a href="blender.html" class="btn-link">🧁 3DCG作品を見る</a>
 
     <!-- ===== Skills ===== -->
     <section id="skills" class="skills fade-in">
@@ -107,7 +109,7 @@
           <h3>ダイジェスト動画</h3>
           <div class="video-wrapper"></div>
           <div class="aspect-ratio">
-          <iframe src="https://youtube.com/embed/qyXoHc_-59M" title="ダイジェスト" allowfullscreen></iframe></div>
+          <iframe src="https://youtube.com/embed/qyXoHc_-59M" tittle="ダイジェスト" allowfullscreen></iframe></div>
           <p>ポートフォリオ作品（5本）をぎゅっと約1分半にまとめた紹介動画です。初めての方やざっくり知りたい方はこちらからどうぞ。</p>
         </div>
 
@@ -115,7 +117,7 @@
           <h3>LunaBell 紹介動画</h3>
           <div class="video-wrapper"></div>
           <div class="aspect-ratio">
-          <iframe src="https://youtube.com/embed/Btsmylr9dKg" title="LunaBell" allowfullscreen></iframe></div>
+          <iframe src="https://youtube.com/embed/Btsmylr9dKg" tittle="LunaBell" allowfullscreen></iframe></div>
           <p>架空美肌・メイク加工アプリ「LunaBell」機能を実際の画面のように表示し、AEやFigumaを使用したスライダー演出付きの紹介動画です。</p>
         </div>
 
@@ -123,7 +125,7 @@
           <h3>Daily Vlog風動画</h3>
           <div class="video-wrapper"></div>
           <div class="aspect-ratio">
-          <iframe src="https://youtube.com/embed/N4yu1AbHn9A" title="Vlog" allowfullscreen></iframe></div>
+          <iframe src="https://youtube.com/embed/N4yu1AbHn9A" tittle="Vlog" allowfullscreen></iframe></div>
           <p>自作キャラクター「mimi」がナレーションで1日の生活をゆるく切り取ったVlog風ムービーです。(動画内の映像はフリー素材を使用しており本人出演ではありません。)</p>
         </div>
 
@@ -131,7 +133,7 @@
           <h3>LeafFlow 紹介動画</h3>
           <div class="video-wrapper"></div>
           <div class="aspect-ratio">
-          <iframe src="https://youtube.com/embed/UmFVQY22ZAE" title="LeafFlow" allowfullscreen></iframe></div>
+          <iframe src="https://youtube.com/embed/UmFVQY22ZAE" tittle="LeafFlow" allowfullscreen></iframe></div>
           <p>架空企業サービス「LeafFlow」を紹介するプロモーション動画を企画・制作しました。Figumaを使用し、Line風のやり取りの様子を表現しました。</p>
         </div>
 
@@ -139,7 +141,7 @@
           <h3>制作の裏側</h3>
           <div class="video-wrapper"></div>
           <div class="aspect-ratio">
-          <iframe src="https://youtube.com/embed/b8vmvseopTM" title="Behind" allowfullscreen></iframe></div>
+          <iframe src="https://youtube.com/embed/b8vmvseopTM" tittle="Behind" allowfullscreen></iframe></div>
           <p>ポートフォリオ制作のワークや使ったツールをわかりやすくまとめて紹介します。</p>
         </div>
 
@@ -147,7 +149,7 @@
           <h3>まとめて視聴：再生リスト</h3>
           <div class="video-wrapper"></div>
           <div class="aspect-ratio">
-          <iframe src="https://www.youtube.com/embed/videoseries?list=PLZF0jO9y5qVK7wershKbs910tO3DG9JsB" title="Playlist" allowfullscreen></iframe></div>
+          <iframe src="https://www.youtube.com/embed/videoseries?list=PLZF0jO9y5qVK7wershKbs910tO3DG9JsB" tittle="Playlist" allowfullscreen></iframe></div>
           <p>全5本を順番にまとめた再生リストです。全ての動画を見続けてみたい方向けに、再生リストもご用意しています。</p>
         </div>
 
