--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
       <h2>こんにちは</h2>
       <p>
         ご覧いただきありがとうございます。<br>
-        このポートフォリオは2025年6月頃にPC購入したのをきっかけに、動画編集やWeb制作、3DCGなどにチャレンジして作ったものです。
-        全て未経験な状態から、サイトや各短編動画を含めて約2週間で制作しました。<br><br>
+        このポートフォリオは、もともと保育士として働いていた私が、園の閉園と2025年6月頃のPC購入をきっかけに、動画編集・Web制作・3DCGなどに挑戦して制作したものです。
+        すべて未経験からのスタートでしたが、サイトや各短編動画を含め、約2週間で一通り形にしました。<br><br>
         下記にあるイラストは過去に友達の為につくったものです。(使用ツール：ibisPaint）<br>
-        絵は得意ではないのですが、下絵や参考画像、写真等をもとに形にしてきました。<br><br>
-        製作中はわからない事も多く、ネットやChatGPTなどのAIツールも参考にしつつ自分なりに試行錯誤を重ねました。<br><br>
-        まだまだ学びの途中ですが、「こんなツールの使用や雰囲気の動画作れる」など感じてもらえたら嬉しいです。<br>
+        絵は得意ではないのですが、下絵や参考画像、写真などをもとに、自分なりに工夫して仕上げています。<br><br>
+        製作中はわからない事も多く、ネット検索やChatGPTなどのAIツールも参考にしつつ自分なりに試行錯誤を重ねました。<br><br>
+        まだまだ学びの途中ですが、「こういうツールや雰囲気でこんな動画が作れるんだ」と感じていただけたら嬉しいです。<br>
         どうぞごゆっくりご覧ください。
       </p>
     </section>
