--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         <li>💻&nbsp;Web制作（HTML / CSS / JavaScript / Figma）</li>
         <li>🖥️&nbsp;3DCG（Blender / VRoid）</li>
         <li>🎤&nbsp;ナレーション制作（VOICEVOX / COEIROINK）</li>
+        <li>🎬&nbsp;YMM4動画編集（YMM4）</li>
       </ul>
     </section>
 
